--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "socket-demo",
     "version": "0.0.1",
+    "scripts": {
+        "start": "node index.js"
+    },
     "description": "my first socket.io app",
     "dependencies": {
         "express": "^4.15.2",
