--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
     "name": "socket-demo",
     "version": "0.0.1",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "build": "npx webpack --config config/webpack.config.js",
+        "watch": "npx webpack --config config/webpack.config.js --watch"
     },
     "description": "my first socket.io app",
     "dependencies": {
         "express": "^4.15.2",
         "socket.io": "^2.3.0"
+    },
+    "devDependencies": {
+        "webpack": "^4.41.0",
+        "webpack-cli": "^3.3.9"
     }
 }
