--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
     "name": "socket-demo",
     "version": "0.0.1",
     "scripts": {
-        "start": "node index.js",
+        "serve": "npx nodemon server.js",
         "build": "npx webpack --config config/webpack.config.js",
         "watch": "npx webpack --config config/webpack.config.js --watch"
     },
     "description": "my first socket.io app",
     "dependencies": {
         "express": "^4.15.2",
+        "pug": "^2.0.4",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
+        "nodemon": "^1.19.3",
         "webpack": "^4.41.0",
         "webpack-cli": "^3.3.9"
     }
