--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "description": "my first socket.io app",
     "dependencies": {
         "express": "^4.15.2",
+        "firebase-admin": "^8.6.0",
         "pug": "^2.0.4",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.0",
+        "uuidv4": "^5.0.1"
     },
     "devDependencies": {
         "nodemon": "^1.19.3",
