--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "description": "my first socket.io app",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.15.2",
         "firebase": "^7.1.0",
         "firebase-admin": "^8.6.0",
