--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "firebase-admin": "^8.6.0",
         "pug": "^2.0.4",
         "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0",
-        "uuidv4": "^5.0.1"
+        "socket.io-client": "^2.3.0"
     },
     "devDependencies": {
         "nodemon": "^1.19.3",
