--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "socket-demo",
+    "name": "flo",
     "version": "0.0.1",
     "scripts": {
         "serve": "npx nodemon server.js",
         "build": "npx webpack --config config/webpack.config.js",
         "watch": "npx webpack --config config/webpack.config.js --watch"
     },
-    "description": "my first socket.io app",
+    "description": "A connectivity app",
     "dependencies": {
         "body-parser": "^1.19.0",
         "express": "^4.15.2",
