--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-node_modules
-public/js/*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# dotenv environment variables file
+.env
+
+# build output
 .DS_Store
+public/js/*
