--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
     "name": "flo",
     "version": "0.0.1",
     "scripts": {
-        "serve": "npx nodemon src/server.js",
-        "build": "npx webpack --config ./config/webpack.config.js",
-        "watch": "npx webpack --config ./config/webpack.config.js --watch"
+        "serve": "nodemon --require @babel/register src/server.js",
+        "build": "webpack --require @babel/register --config src/config/webpack.config.js",
+        "watch": "webpack --require @babel/register --config src/config/webpack.config.js --watch"
     },
     "description": "A connectivity app",
     "dependencies": {
+        "@babel/cli": "^7.1.5",
+        "@babel/core": "^7.1.6",
+        "@babel/preset-env": "^7.1.6",
+        "@babel/register": "^7.0.0",
         "body-parser": "^1.19.0",
+        "core-js": "^3.4.1",
+        "dotenv": "^6.1.0",
         "express": "^4.15.2",
         "firebase": "^7.1.0",
         "firebase-admin": "^8.6.0",
         "pug": "^2.0.4",
+        "regenerator-runtime": "^0.13.3",
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0"
     },
     "devDependencies": {
+        "@types/core-js": "^2.5.2",
         "nodemon": "^1.19.3",
         "webpack": "^4.41.0",
         "webpack-cli": "^3.3.9"
