--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
         "@babel/register": "^7.0.0",
         "body-parser": "^1.19.0",
         "core-js": "^3.4.1",
+        "regenerator-runtime": "^0.13.3",
+        "cloudinary": "^1.13.2",
+        "datauri": "^1.1.0",
         "dotenv": "^6.1.0",
+        "event-stream": "^4.0.1",
         "express": "^4.15.2",
+        "pug": "^2.0.4",
+        "multer": "^1.4.1",
         "firebase": "^7.1.0",
         "firebase-admin": "^8.6.0",
-        "pug": "^2.0.4",
-        "regenerator-runtime": "^0.13.3",
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0"
     },
@@ -28,5 +32,7 @@
         "nodemon": "^1.19.3",
         "webpack": "^4.41.0",
         "webpack-cli": "^3.3.9"
-    }
+    },
+    "author": "webmagster",
+    "license": "MIT"
 }
